<resources>
    <string name="app_name">佲慧康宇</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--登录页面文字资源-->
    <string name="login_username">请输入您的登录账号</string>
    <string name="login_password">请输入账号密码</string>
    <string name="login_text">登录</string>
    <string name="login_register">立即注册</string>
    <string name="login_forgetpwd">忘记密码？</string>
    <!--注册界面文字资源-->
    <string name="register_phone">请输入手机号</string>
    <string name="register_phone_code">请输入验证码</string>
    <string name="register_get_phone_code">获取验证码</string>
    <string name="register_pwd">请输入密码(6-20位数字字母组合)</string>
    <string name="register_gettext_left">注册代表您已同意</string>
    <string name="register_gettext_right">《佲慧康宇健康平台用户使用协议》</string>
    <!--忘记密码文字资源-->
    <string name="forget_ok">确认</string>
    <string name="forget_input_newpwd">请输入新密码(6-20位数字字母组合)</string>

    <!--个人中心文字-->
    <string name="person_title">个人资料</string>
    <string name="person_header">头像</string>
    <string name="person_sex">称谓</string>
    <string name="person_username">姓名</string>
    <string name="person_username_internet">昵称</string>
    <string name="person_shop_name">所属店铺</string>
    <string name="person_work">职位</string>
    <string name="person_phone">绑定手机</string>
    <string name="person_username_default">未设置</string>
    <string name="person_sex_defalut">先生</string>
    <string name="person_username_internet_default">未设置</string>
    <string name="person_shop_name_default">未设置</string>
    <string name="person_work_default">店长</string>
    <string name="person_phone_default">未设置</string>
    <string name="person_update_title">资料修改</string>
    <string name="person_update_save">保存</string>

    <!--DrawerListView文字资源-->
    <string name="drawer_list_caigou">我的采购单</string>
    <string name="drawer_list_info_update">资料修改</string>
    <string name="drawer_list_wallet">我的钱包</string>
    <string name="drawer_list_kefu">服务专员</string>
    <string name="drawer_list_mianze">免责声明</string>
    <string name="drawer_list_about">关于我们</string>
    <string name="drawer_list_set">设置</string>
    <string name="drawer_list_name">典货通</string>
    <string name="drawer_bottom">佲慧康宇健康平台 V</string>

    <!--MainGridView文字资源-->
    <string name="main_title">佲慧康宇健康平台 </string>
    <string name="main_gridview_1">食药前沿</string>
    <string name="main_gridview_2">典货通</string>
    <string name="main_gridview_3">药邻网</string>
    <string name="main_gridview_4">佲惠付</string>
    <string name="main_gridview_5">121健康网</string>
    <string name="main_gridview_6">国医馆</string>
    <string name="main_gridview_7">老P之家</string>
    <string name="main_gridview_8">大咖在线</string>
    <string name="main_gridview_9">馨计划</string>


    <!--MyselectedActivity我的采购单-->
    <string name="myselect_title">我的采购单</string>
    <string name="myselected_right">账单</string>
    <string name="myselect_search_text">药品、商家、订单编号</string>
    <string name="myselect_body1">我的资质</string>
    <string name="myselect_body2">济南国美大药房</string>
    <string name="myselect_bottom1">收藏商品</string>
    <string name="myselect_bottom2">关注商家</string>
    <string name="myselect_bottom3">常购商品</string>
    <string name="myselect_bottom4">浏览历史</string>
    <string name="myselect_d_all">全部</string>
    <string name="myselect_d_nopay">待付款</string>
    <string name="myselect_d_paied">待收货</string>
    <string name="myselect_d_buied">已完成</string>
    <string name="myselect_item_money">￥</string>
    <string name="myselect_item_money_number">999.99</string>
    <string name="myselect_item_money_danwei">0瓶</string>
    <!--账单（BillActivity）文字-->
    <string name="bill_title">账单</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!--发票信息Invoiceactivity-->
    <string name="invoice_company_name">暂无店铺名称</string>
    <string name="invoice_company_adress">暂无店铺地址</string>
    <string name="invoice_company_corporation">请输入法人姓名</string>
    <string name="invoice_company_phone">请输入联系方式</string>
    <string name="invoice_tab1">资质信息</string>
    <string name="invoice_tab2">发票信息</string>
    <string name="invoice_title">我的资质</string>
    <string name="invoice_save">保存</string>
    <string name="invoice_fragment2_txt1">发票类型</string>
    <string name="invoice_fragment2_txt2">税号</string>
    <string name="invoice_fragment2_txt3">开户银行</string>
    <string name="invoice_fragment2_txt4">银行账号</string>
    <string name="invoice_fragment2_txt11">普票</string>
    <string name="invoice_fragment2_txt12">专票</string>
    <string name="invoice_fragment2_txt21">营业执照上的统一社会信用代码</string>
    <string name="invoice_fragment2_txt31">xxx银行xx支行</string>
    <string name="invoice_fragment2_txt41">开户许可证或法人的私人账号</string>
    <!--资质录入credentialsActivity-->
    <string name="credentials_title">资质录入</string>


    <!--食药前沿-->
    <string name="shiyaoqianyan_title">食药前沿</string>
    <!--关于页面-->
    <string name="about_title">简介</string>
    <string name="about_body">\t\t\t典货通B2B平台，致力于移动互联网连接药企，医药流通企业、药品及社区诊所的营销平台。\n
        \t\t\t其次，要保证睡眠的质量。健康的肝脏离不开良好的睡眠。睡眠是人类自身对脑和整个神经系统的有效调节，在高质量睡眠状态下，体内出现一系列有利于生理、生化的变化，起到祛病延年的作用。
　　\n\t\t\t再者，要注意保暖。春季阳光明媚的同时气候变化也大，常让人忽略初春的善变与寒冷。衣服要慢慢减少，不要突然换上夏季的短袖短裤，容易引起寒邪，也容易引起鼻塞、咳嗽、感冒等症状，尤其中老年人。</string>

    <!--免责声明页面-->
    <string name="mianze_title">免责声明</string>
    <string name="mianze_body">\t\t\t1.不可抗力：《合同法》第117条规定，因不可抗力不能履行合同的，根据不可抗力的影响，部分或者全部免除责任，但法律另有规定的除外。当事人延迟履行后发生不可抗力的，不能免除责任。本法所称不可抗力，是指不能预见、不能避免并不能克服的客观情况。
      \n\t\t\t2.货物本身的自然性质、货物的合理损耗：《合同法》第311条规定：承运人对运输过程中货物的毁损、灭失承担损害赔偿责任，但承运人证明货物的毁损、灭失是因不可抗力、货物本身的自然性质或者合理损耗以及托运人、收货人的过错造成的，不承担损害赔偿责任。
      \n\t\t\t3.债权人的过错：《合同法》第311条规定、第370条规定：寄存人交付的保管物有瑕疵或者按照保管物的性质需要采取特殊保管措施的，寄存人应当将有关情况告知保管人。寄存人未告知，致使保管物受损失的，保管人不承担损害赔偿责任；保管人因此受损失的，除保管人知道或者应当知道并且未采取补救措施的以外，寄存人应当承担损害赔偿责任。</string>
    <!--联系我们界面-->
    <string name="connect_phone">客服：</string>
    <string name="connect_wechat">微信公众号：</string>
    <string name="connect_QQ">招商电话：</string>
    <string name="connect_email">邮箱：</string>

    <!--服务专员页面-->
    <string name="mywaiter_text1">姓名：</string>
    <string name="mywaiter_text2">专员联系方式：</string>
    <string name="mywaiter_text3">负责区域：</string>
    <string name="mywaiter_text4">直管领导：</string>
    <string name="mywaiter_text5">领导联系方式：</string>

    <!--个人中心资料修改-->
    <string name="myperson_updata_pwd">修改密码</string>
    <string name="myperson_updata_phone">更换手机</string>
    <!--更换手机号页面-->
    <string name="bindphone_ok">确认</string>
    <string name="bindphone_title">更换手机号</string>
    <!--修改密码界面-->
    <string name="alterpwd_title">修改密码</string>
    <string name="alterpwd_old">请输入旧密码</string>
    <string name="alterpwd_new">请输新密码（6-20位数字字母组合）</string>
    <string name="alterpwd_new1">请再次输入新密码（6-20位数字字母组合）</string>
    <string name="alterpwd_button">确认修改</string>
    <!--系统设置界面-->
    <string name="system_setmessage_button">消息推送</string>
    <string name="system_help">帮助</string>
    <string name="system_logout">退出账号</string>
    <string name="create_shop_txt1">选择地址:</string>
    <string name="create_shop_txt2">选择坐标:</string>
    <string name="create_shop_txt3">请输入店铺名称</string>
    <string name="create_shop_txt31">区号</string>
    <string name="create_shop_txt32">固定电话</string>
    <string name="create_shop_txt4">请输入店铺的详细地址XX路XX号</string>
    <string name="create_shop_txt41">请输入店铺所在区域的邮政编码</string>
    <string name="create_shop_txt5">下一步</string>

    <string name="add_shop_finish_name">姓名：</string>
    <string name="add_shop_finish_mywaiter">服务专员：</string>
    <string name="add_shop_finish_mywaiter_txt">请输入服务专员工号(若无请略过)</string>
    <string name="add_shop_finish_button">确认加入</string>
    <string name="add_shop_search">店铺、药店</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="shop_bra">本合作期内，活动宣传资料的设计、制作和提供由双方协商确定各自分工情况。所有宣传资料的所有权和知识产权（包括但不限于著作权）归属提供方，另一方仅有使用权。未经提供方书面同意，另一方（使用方）不得将其该宣传资料用本协议以外的其他事项。双方保证其所提供的宣传资料内容合法，不得侵犯第三方的知识产权及其他合法权益。因宣传资料侵犯第三方合法权利造成使用方的任何损失，由提供方承担全部赔偿责任。</string>
</resources>
