<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coloreeeeee"
    android:orientation="vertical"
    tools:context="com.ymky.dianhuotong.person.PersonInfmoActivity">

    <com.ymky.dianhuotong.custom.DiaHuiTongBaseTitleBar
        android:id="@+id/personinfo_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x64" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x196"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x49"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/person_header"
                android:textColor="@color/color333333"
                android:textSize="@dimen/t14" />
            <ImageView
                android:layout_width="@dimen/x33"
                android:layout_height="@dimen/x34"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15"
            android:background="@color/colorCDCDCD" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x49"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/person_username"
                android:textColor="@color/color333333"
                android:textSize="@dimen/t14" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:textColor="@color/color333333"
                android:textSize="@dimen/t14"
                android:gravity="center_vertical"
                android:text="@string/person_username_default"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15"
            android:background="@color/colorCDCDCD" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x49"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/person_username_internet"
                android:textColor="@color/color333333"
                android:textSize="@dimen/t14" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:textColor="@color/color333333"
                android:textSize="@dimen/t14"
                android:gravity="center_vertical"
                android:text="@string/person_username_internet_default"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15"
            android:background="@color/colorCDCDCD" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x49"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/person_sex"
                android:textColor="@color/color333333"
                android:textSize="@dimen/t14" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:textColor="@color/color333333"
                android:textSize="@dimen/t14"
                android:gravity="center_vertical"
                android:text="@string/person_sex_defalut"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x147"
        android:layout_marginTop="@dimen/x9"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x49"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/person_shop_name"
                android:textColor="@color/color333333"
                android:textSize="@dimen/t14" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:textColor="@color/color333333"
                android:textSize="@dimen/t14"
                android:gravity="center_vertical"
                android:text="@string/person_shop_name_default"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15"
            android:background="@color/colorCDCDCD" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x49"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/person_work"
                android:textColor="@color/color333333"
                android:textSize="@dimen/t14" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:textColor="@color/color333333"
                android:textSize="@dimen/t14"
                android:gravity="center_vertical"
                android:text="@string/person_work_default"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15"
            android:background="@color/colorCDCDCD" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x49"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/person_phone"
                android:textColor="@color/color333333"
                android:textSize="@dimen/t14" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:textColor="@color/color333333"
                android:textSize="@dimen/t14"
                android:gravity="center_vertical"
                android:text="@string/person_phone_default"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15"
            android:background="@color/colorCDCDCD" />
    </LinearLayout>

</LinearLayout>
