<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mhky.dianhuotong.activity.BindPhoneActivity"
    android:background="@color/colorWhite">
    <com.mhky.dianhuotong.custom.viewgroup.DianHuoTongBaseTitleBar
        android:id="@+id/bind_phone_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"/>

    <LinearLayout
        android:id="@+id/bind_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x52"
        android:layout_marginEnd="@dimen/x49"
        android:layout_marginTop="@dimen/x57"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x30"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/x15"
                android:layout_height="@dimen/x22"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icon_phone" />

            <EditText
                android:id="@+id/register_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_weight="5"
                android:background="@null"
                android:hint="@string/register_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:padding="@dimen/text_pading"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBFBFBF"
                android:textSize="@dimen/t11" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginTop="@dimen/x5"
            android:background="@color/colorBFBFBF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="19dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icon_lock" />

            <EditText
                android:id="@+id/register_phone_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x16"
                android:layout_weight="5"
                android:background="@null"
                android:hint="@string/register_phone_code"
                android:inputType="number"
                android:maxLength="8"
                android:maxLines="1"
                android:padding="@dimen/text_pading"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBFBFBF"
                android:textSize="@dimen/t11" />

            <TextView
                android:id="@+id/register_getmessage"
                android:layout_width="@dimen/x50"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_register_getcode"
                android:gravity="center"
                android:text="@string/register_get_phone_code"
                android:textColor="@color/color04c1ab"
                android:textSize="11sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginTop="@dimen/x5"
            android:background="@color/colorBFBFBF" />

        <TextView
            android:id="@+id/bind_phone_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x33"
            android:layout_marginTop="@dimen/x71"
            android:background="@drawable/shape_login_button"
            android:gravity="center"
            android:text="@string/bindphone_ok"
            android:textSize="@dimen/t12" />
    </LinearLayout>
</LinearLayout>
