<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:a="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.mhky.dianhuotong.activity.ShiYaoQianYanActivity">
    <com.mhky.dianhuotong.custom.viewgroup.DianHuoTongBaseTitleBar
        android:id="@+id/system_set_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40" />

    <RelativeLayout
        android:id="@+id/person_info_update_go_bind_phone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/x49"
        android:layout_marginLeft="@dimen/x15"
        android:layout_marginRight="@dimen/x15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/system_setmessage_button"
            android:textColor="@color/color333333"
            android:textSize="@dimen/t14" />

        <RelativeLayout
            android:layout_width="@dimen/x36"
            android:layout_height="@dimen/x18"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

            <ch.ielse.view.SwitchView
                android:id="@+id/system_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginLeft="@dimen/x15"
        android:layout_marginRight="@dimen/x15"
        android:background="@color/colorCDCDCD" />

    <RelativeLayout
        android:id="@+id/system_set_help"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/x49"
        android:layout_marginLeft="@dimen/x15"
        android:layout_marginRight="@dimen/x15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/system_help"
            android:textColor="@color/color333333"
            android:textSize="@dimen/t14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_go" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginLeft="@dimen/x15"
        android:layout_marginRight="@dimen/x15"
        android:background="@color/colorCDCDCD" />

    <TextView
        android:id="@+id/system_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x33"
        android:layout_marginEnd="@dimen/x50"
        android:layout_marginStart="@dimen/x50"
        android:layout_marginTop="@dimen/x217"
        android:background="@drawable/shape_login_button"
        android:gravity="center"
        android:text="@string/system_logout"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/t12" />
</LinearLayout>